--- a/src/components/common/Navbar/NavbarComponent.module.css
+++ b/src/components/common/Navbar/NavbarComponent.module.css
@@ -4,6 +4,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 9999;
 }
 .navbar{
     background-color: rgb(var(--color-accent)) !important;
