--- a/src/components/FilterRoomsContainer/FilterRoomsContainer.module.css
+++ b/src/components/FilterRoomsContainer/FilterRoomsContainer.module.css
@@ -1,4 +1,18 @@
 
 .filter_container{
+    position: relative;
     width: 100%;
+    margin: auto;
+    padding: 10px;
+    margin-top: 30px;
+    min-height: 300px;
+    max-width: 100vw;
+    overflow: hidden;
+}
+
+
+@media (min-width: 992px) {
+    .filter_container{
+        max-width: 800px;
+    }
 }
