--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,3 +64,25 @@
 textarea{
   resize: none;
 }
+
+.reservation-title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #2c3e50;
+  text-align: center; 
+  margin-bottom: 1rem;
+}
+
+
+.reservation-paragraph {
+  font-size: 1.1rem;
+  line-height: 1.6;
+  color: #34495e; 
+  text-align: justify;
+  max-width: 800px; 
+  margin: 0 auto 2rem auto;
+}
+/* Fin  de la sección de estilos para el formulario de reserva */
+
+
+/* global.css */
