--- a/src/components/FilterRoomsContainer/FilterRoomsContainer.module.css
+++ b/src/components/FilterRoomsContainer/FilterRoomsContainer.module.css
@@ -5,11 +5,61 @@
     margin: auto;
     padding: 10px;
     margin-top: 30px;
-    min-height: 300px;
+    min-height: 200px;
     max-width: 100vw;
     overflow: hidden;
 }
 
+.loading_search{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    font-size: 4rem;
+    margin-top: 30px;
+}
+
+.not_available{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    font-size: 1.5rem;
+    margin-top: 30px;
+
+    img{
+        width: 64px;
+        height: 64px;
+        margin-bottom: 15px;
+    }
+    span{
+        color: rgb(var(--color-accent-light));
+        text-align: center;
+    }
+}
+
+.error_search{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    font-size: 2rem;
+    margin-top: 30px;
+
+    svg{
+        color: rgb(255, 130, 130);
+        margin-bottom: 15px;
+    }
+    span{
+        color: rgb(var(--color-accent-light));
+    }
+}
 
 @media (min-width: 992px) {
     .filter_container{
