--- a/src/components/FilterRoomsContainer/FilterRoomsContainer.module.css
+++ b/src/components/FilterRoomsContainer/FilterRoomsContainer.module.css
@@ -1,13 +1,16 @@
-
+.container{
+    margin: auto;
+}
 .filter_container{
     position: relative;
-    width: 100%;
+    width: 100dvw;
+    left: -25px;
     margin: auto;
-    padding: 10px;
     margin-top: 30px;
     min-height: 200px;
-    max-width: 100vw;
+    max-width: 100dvw;
     overflow: hidden;
+    margin-bottom: 100px;
 }
 
 .loading_search{
@@ -64,5 +67,12 @@
 @media (min-width: 992px) {
     .filter_container{
         max-width: 800px;
+        left: 0px;
+    }
+}
+@media (min-width: 768px) and (max-width: 992px) {
+    .filter_container{
+        max-width: 450px;
+        left: 0px;
     }
 }
