🎨 [STYLE] nuevos cambios de estilos en la pagina de inicio

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@
   }
 
   body{
-    background-color: var(--color-light);
+    background-color: var(--color-bg-card);
     font-family: "Poppins", sans-serif;
     display: flex;
     flex-direction: column;
