--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,9 @@
 .seccion1{
     background-color: #0F3D22;
     position: relative;
-    padding-bottom: 80px;
+    padding-bottom: 50px;
     clip-path: polygon(0 0, 100% 0, 100% 95%, 50% 100%, 50% 100%, 0 95%);
+    min-height: 80dvh;
 }
 
 .row-index{
@@ -23,16 +24,16 @@
 }
 
 .transparent-rectangle {
-  width: 65%;
-  height: 60%;
-  max-width: 400px;
-  max-height: 300px;
-  background-color: rgba(223, 208, 208, 0.705);
+  width: 300px;
+  height: 300px;
+  background-color: rgba(223, 208, 208, 0.8);
   z-index: 20;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  border-radius: 50%;
+  box-shadow: rgba(103, 103, 103, 0.56) 0px 22px 70px 4px;
 }
 
 .logo {
@@ -46,8 +47,17 @@
 }
 
 .contenedorDeLogo{
-position: relative;
+  position: relative;
 width: 100%;
+min-height: 550px;
+background-image: url('../assets/imgInicio/hotel.jpg');
+background-size: cover;
+background-position: 40%;
+clip-path: polygon(0 0, 100% 0, 100% 95%, 50% 100%, 50% 100%, 0 95%);
+}
+.banner-img{
+  position: relative;
+  bottom: 90px;
 }
 
 .contenedor {
@@ -64,8 +74,21 @@ width: 100%;
   object-fit: cover;
 }
 
-@media (min-width: 1200px) {
-  .logo {
-    transform: translate(-50%, -50%) scale(1.5);
+@media (min-width: 992px) {
+  .seccion1{
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 50% 100%, 0 90%);
   }
+  .contenedorDeLogo{
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 50% 100%, 0 80%);
+    }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .seccion1{
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 50% 100%, 0 90%);
+    min-height: 70dvh;
+  }
+  .contenedorDeLogo{
+    clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 50% 100%, 0 90%);
+    }
 }
