--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,6 +23,94 @@
   color: #2f975a;
 }
 
+.aboutUs-container{
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 90px !important ;
+  margin-bottom: 90px !important ;
+
+  .aboutUs-info{
+    width: 100%;
+    max-width: 400px;
+    margin-bottom: 50px;
+
+    p{
+      margin-top: 15px;
+      font-weight: 500;
+    }
+      button {
+      background: transparent;
+      backface-visibility: hidden;
+      border-radius: .375rem;
+      border-style: solid;
+      border-width: .125rem;
+      box-sizing: border-box;
+      color: rgb(var(--color-accent));
+      cursor: pointer;
+      display: inline-block;
+      font-family: Circular,Helvetica,sans-serif;
+      font-size: 1.125rem;
+      font-weight: 700;
+      letter-spacing: -.01em;
+      line-height: 1.3;
+      padding: .875rem 1.125rem;
+      position: relative;
+      text-align: left;
+      text-decoration: none;
+      transform: translateZ(0) scale(1);
+      transition: transform .2s;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+    }
+
+    button:not(:disabled):hover {
+      transform: scale(1.05);
+    }
+
+    button:not(:disabled):hover:active {
+      transform: scale(1.05) translateY(.125rem);
+    }
+
+    button:focus {
+      outline: 0 solid transparent;
+    }
+
+    button:focus:before {
+      content: "";
+      left: calc(-1*.375rem);
+      pointer-events: none;
+      position: absolute;
+      top: calc(-1*.375rem);
+      transition: border-radius;
+      user-select: none;
+    }
+
+    button:focus:not(:focus-visible) {
+      outline: 0 solid transparent;
+    }
+
+    button:focus:not(:focus-visible):before {
+      border-width: 0;
+    }
+
+    button:not(:disabled):active {
+      transform: translateY(.125rem);
+    }
+  }
+}
+.img-hotel-container{
+  width: 100%;
+  max-width: 500px;
+  max-height: 500px;
+
+  img{
+    width: 100%;
+  }
+}
+
 .transparent-rectangle {
   width: 300px;
   height: 300px;
@@ -66,12 +154,55 @@ clip-path: polygon(0 0, 100% 0, 100% 95%, 50% 100%, 50% 100%, 0 95%);
   align-items: center;
 }
 
+/* section promos */
+.section-promos{
+  width: 100%;
+  max-width: 1100px;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 80px;
+}
+
+.img-banner-container{
+  position: relative;
+  min-height: 320px;
+  overflow: hidden;
+  cursor: pointer;
+
+  img{
+    width: 100%;
+    height: 100%;
+    min-height: 320px;
+    transition: all .8s ease;
+    object-fit: cover !important;
+    &:hover{
+      transition: all .8s ease;
+      transform: scale(1.2);
+    }
+  }
+
+  .caption-banner{
+    position: absolute;
+    bottom: 10px;
+    left: 18px;
+    color: rgb(var(--color-accent-light));
+    text-shadow: 4px 1px 16px rgba(0,0,0,1);
+  }
+}
+
+
+
 @media (min-width: 992px) {
   .seccion1{
     clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 50% 100%, 0 90%);
   }
   .contenedorDeLogo{
     clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 50% 100%, 0 80%);
+    }
+
+    .aboutUs-container{
+      flex-flow: row;
+      gap: 100px;
     }
 }
 
