--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,3 +26,63 @@
   .card_integrated{
     box-shadow: rgba(37, 37, 37, 0.24) 0px 3px 8px;
   }
+
+  .button-custom {
+    background: transparent;
+    backface-visibility: hidden;
+    border-radius: .375rem;
+    border-style: solid;
+    border-width: .125rem;
+    box-sizing: border-box;
+    color: rgb(var(--color-accent));
+    cursor: pointer;
+    display: inline-block;
+    font-family: Circular,Helvetica,sans-serif;
+    font-size: 1.125rem;
+    font-weight: 700;
+    letter-spacing: -.01em;
+    line-height: 1.3;
+    padding: .875rem 1.125rem;
+    position: relative;
+    text-align: left;
+    text-decoration: none;
+    transform: translateZ(0) scale(1);
+    transition: transform .2s;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .button-custom:not(:disabled):hover {
+    transform: scale(1.05);
+  }
+  
+  .button-custom:not(:disabled):hover:active {
+    transform: scale(1.05) translateY(.125rem);
+  }
+  
+  .button-custom:focus {
+    outline: 0 solid transparent;
+  }
+  
+  .button-custom:focus:before {
+    content: "";
+    left: calc(-1*.375rem);
+    pointer-events: none;
+    position: absolute;
+    top: calc(-1*.375rem);
+    transition: border-radius;
+    user-select: none;
+  }
+  
+  .button-custom:focus:not(:focus-visible) {
+    outline: 0 solid transparent;
+  }
+  
+  .button-custom:focus:not(:focus-visible):before {
+    border-width: 0;
+  }
+  
+  .button-custom:not(:disabled):active {
+    transform: translateY(.125rem);
+  }
