corregi el footer, como tambien el responsive para que en dispositivos moviles este centrado la info del footer,la hoja de estilos tambien se modifico

--- a/src/components/common/Footer/Footer.css
+++ b/src/components/common/Footer/Footer.css
@@ -6,16 +6,18 @@ h5 {
 
 .footer-background {
   position: relative;
+  
 
 }
 
 .text-link {
-  color: #00652F;
+  color: white;
   text-decoration: none;
+ background-color:#95C46C;
 }
 
 .text-link:hover {
-  color: #218838;
+  color:#00652F;
   text-decoration: underline; 
   transition: color 0.3s ease;
 }
