--- a/src/components/pages/Login/Login.css
+++ b/src/components/pages/Login/Login.css
@@ -18,3 +18,9 @@ a:hover {
 .custom-btn:hover {
   background-color: #1b673b; 
 }
+.login-container{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
