--- a/src/components/adminComponents/ModalAdmin/ModalAdmin.module.css
+++ b/src/components/adminComponents/ModalAdmin/ModalAdmin.module.css
@@ -1,4 +1,7 @@
 
-.modal{
-    z-index: 999;
+.modal_container{
+}
+.modal_header{
+    background-color: var(--color-bg-card);
+    color: rgb(var(--color-accent-light));
 }
