--- a/src/components/adminComponents/UsersContainer/UserContainer.module.css
+++ b/src/components/adminComponents/UsersContainer/UserContainer.module.css
@@ -8,6 +8,7 @@
     flex-flow: column;
     align-items: center;
     justify-content: center;
+    margin-top: 30px;
 }
 .loading_search{
     position: absolute;
@@ -25,12 +26,30 @@
     min-height: 80dvh;
     gap: 20px;
 }
+.table_container{
+    max-height: 700px;
+    margin-top: 30px;
+    overflow: hidden;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+        width: 10px;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: rgb(var(--color-accent-light));
+        border-radius: 10px;
+      }
+      &::-webkit-scrollbar-track {
+        background-color: transparent;
+      }
+}
 .table{
     --bs-table-bg: background-color: transparent !important;
-    
 }
 .thead_table{
-    background-color: transparent !important;
+    background-color: var(--color-bg-card) !important;
+    position: sticky;
+    top: 0;
 }
 .tr_user{
     background-color: transparent !important;
