--- a/src/components/BtnLogin/BtnLogin.module.css
+++ b/src/components/BtnLogin/BtnLogin.module.css
@@ -1,16 +1,15 @@
-
-.btn_login{
-    background-color: var(--color-light-secondary);
+.btn_login {
+    border: 2px solid rgba(255, 255, 255, 0.8); 
+    border-radius: 8px; 
+    padding: 10px; 
     color: var(--color-light-secondary);
     background-color: transparent;
-    padding: 0 8px;
-    border: 2px solid rgba(255, 255, 255, 0.8);
-    border-radius: 10px;
-    font-size: 1.1rem;
-    transition: all .3s ease;
+    font-size: 1rem;
+    transition: all 0.3s ease;
+    cursor: pointer;
 
-    &:hover{
-        background-color: rgba(244, 246, 255, .2);
-        transition: all .3s ease;
+    &:hover {
+        background-color: rgba(244, 246, 255, 0.2);
+        transition: all 0.3s ease;
     }
 }
