--- a/src/components/adminComponents/CardAdminRoom/CardAdminRoom.module.css
+++ b/src/components/adminComponents/CardAdminRoom/CardAdminRoom.module.css
@@ -1,111 +1,77 @@
-.rooms_container {
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  
-  .tabs_admin_container {
+.room_container{
+    max-width: 100%;
+    margin-top: 20px;
+}
+.tabs_admin_container{
+    width: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .loading_search {
-    display: flex;
+    flex-flow: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
-  }
-  
-  .table {
-    background-color: #fff;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  .thead_table {
-    background-color: #007bff;
-    color: #fff;
-  }
-  
-  .tr_room {
-    transition: background-color 0.3s;
-  }
-  
-  .tr_room:hover {
-    background-color: #f1f7ff;
-  }
-  
-  .tr_room td {
-    padding: 12px 16px;
-    border-bottom: 1px solid #dee2e6;
-    text-align: center;
-  }
-  
-  .icon_edit {
-    color: #28a745;
-    cursor: pointer;
-    margin-right: 10px;
-    transition: color 0.2s;
-  }
-  
-  .icon_edit:hover {
-    color: #218838;
-  }
-  
-  .icon_delete {
-    color: #dc3545;
-    cursor: pointer;
-    transition: color 0.2s;
-  }
-  
-  .icon_delete:hover {
-    color: #c82333;
-  }
-  
-  .button-custom {
-    display: inline-flex;
+    margin-top: 30px;
+}
+.loading_search{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-flow: row;
     align-items: center;
-    padding: 8px 16px;
-    background-color: #28a745;
-    color: #fff;
-    border-radius: 4px;
-    border: none;
-    font-weight: bold;
-    font-size: 16px;
-    transition: background-color 0.2s;
-  }
-  
-  .button-custom:hover {
-    background-color: #218838;
-  }
-  .table th,
-  .table td {
-    vertical-align: middle;
-  }
-  
-  .thead_table th {
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: bold;
-  }
-  
-  .table td:first-child {
-    width: 50px;
-  }
-  
-  .table th,
-  .table td {
-    padding: 10px;
+    width: 100%;
+    justify-content: center;
+    font-size: 1.3rem;
+    margin: auto;
     text-align: center;
-  }
-  
-  .text-success {
-    color: #28a745;
-  }
-  
+    min-height: 80dvh;
+    gap: 20px;
+}
+.table_container{
+    max-height: 700px;
+    margin-top: 30px;
+    overflow: hidden;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+        width: 10px;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: rgb(var(--color-accent-light));
+        border-radius: 10px;
+      }
+      &::-webkit-scrollbar-track {
+        background-color: transparent;
+      }
+}
+.table{
+    --bs-table-bg: background-color: transparent !important;
+}
+.thead_table{
+    background-color: var(--color-bg-card) !important;
+    position: sticky;
+    top: 0;
+}
+.tr_room{
+    background-color: transparent !important;
+    vertical-align: middle;
+    
+    th{
+        color: rgba(42, 42, 42, .7) !important;
+    }
+    & :last-child{
+        text-align: center;
+    }
+}
+
+@media (min-width: 992px) {
+    .users_container{
+        max-width: 85%;
+        margin-top: 20px;
+    }
+
+    .tabs_admin_container{
+        flex-flow: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+}
