--- a/src/components/adminComponents/RowRoom/RowRoom.module.css
+++ b/src/components/adminComponents/RowRoom/RowRoom.module.css
@@ -1,66 +1,65 @@
-
-.tr_room {
-  transition: background-color 0.3s ease;
+.room_row_container{
+    background-color: transparent !important;
 }
 
-.tr_room:hover {
-  background-color: #f8f9fa; 
+.buttons_container{
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
 }
 
-.tr_room td:first-child {
-  text-align: center;
-  width: 40px;
+.action_button{
+    background-color: transparent !important;
+    color: rgb(var(--color-accent));
+    transition: all .5s ease;
+    border: 1px solid rgba(var(--color-accent-light), .8);
+
+    &:hover{
+        transition: all .5s ease;
+        color: rgba(var(--color-accent), .5);
+        border: 1px solid rgba(var(--color-accent-light), .6);
+    }
+    &:focus{
+        color: rgba(var(--color-accent), .5) !important;
+        border: 1px solid rgba(var(--color-accent-light), .6) !important; 
+    }
+    
+    &:last-child{
+        color: rgb(255, 106, 106);
+        border: 1px solid rgb(255, 106, 106, .8);
+        &:hover{
+            color: rgba(255, 106, 106, .6);
+            border: 1px solid rgb(255, 106, 106, .6);
+        }
+        &:focus{
+            color: rgb(255, 106, 106) !important;
+            border: 1px solid  rgb(255, 106, 106, .8) !important; 
+        }
+    }
 }
 
-.tr_room td:nth-child(2) {
-  font-weight: bold;
-  color: #343a40;
+td{
+    background-color: transparent !important;
+    text-align: start;
+    vertical-align: middle;
+    color: rgba(31, 31, 31, 0.9) !important;
+    font-weight: 400;
+
+    div{
+        span{
+            margin-top: auto;
+        }
+    }
 }
 
+.room_image {
+    width: 70%;
+    height: auto;
+    border-radius: 4px;
+    object-fit: cover;
+  }
 
-.tr_room td:nth-child(3) {
-  color: #28a745;
-}
+  
 
-
-.tr_room td:nth-child(4) {
-  font-weight: bold;
-  color: #28a745; 
-}
-
-.tr_room td:nth-child(4):not(:has(> span.available)) {
-  color: #dc3545;
-}
-
-
-.tr_room td:nth-child(5) {
-  color: #6c757d; 
-  font-size: 0.9em;
-}
-
-
-.tr_room td:nth-child(6) {
-  font-size: 0.9em;
-  color: #495057;
-}
-
-
-.icon_edit {
-  color: #007bff; 
-  margin-right: 10px;
-  transition: color 0.3s ease;
-}
-
-.icon_edit:hover {
-  color: #0056b3; 
-}
-
-.icon_delete {
-  color: #dc3545; 
-  cursor: pointer;
-  transition: color 0.3s ease;
-}
-
-.icon_delete:hover {
-  color: #c82333; 
-}
