--- a/src/components/adminComponents/UsersContainer/UserContainer.module.css
+++ b/src/components/adminComponents/UsersContainer/UserContainer.module.css
@@ -1,3 +1,27 @@
+.user_data_container{
+    display: flex;
+    flex-flow: column;
+    gap: 5px;
+}
+.user_data{
+    position: relative;
+    color: rgb(var(--color-accent-light));
+    font-size: 1.3rem;
+    text-decoration:wavy;
+    margin-left: 20px;
+
+    &.user_data_email{
+        font-size: 1.1rem;
+    }
+
+    &::before {
+        content: "•";
+        position: absolute;
+        left: -15px;
+        color: rgb(var(--color-accent-light));
+        font-size: 1.2em;
+    }
+}
 .users_container{
     max-width: 100%;
     margin-top: 20px;
@@ -9,6 +33,7 @@
     align-items: center;
     justify-content: center;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 .loading_search{
     position: absolute;
