--- a/src/components/adminComponents/UsersContainer/UserContainer.module.css
+++ b/src/components/adminComponents/UsersContainer/UserContainer.module.css
@@ -23,6 +23,8 @@
     }
 }
 .users_container{
+    display: flex;
+    flex-flow: column;
     max-width: 100%;
     margin-top: 20px;
 }
@@ -30,6 +32,7 @@
     width: 100%;
     display: flex;
     flex-flow: column;
+    gap: 1rem;
     align-items: center;
     justify-content: center;
     margin-top: 30px;
@@ -91,6 +94,7 @@
     .users_container{
         max-width: 85%;
         margin-top: 20px;
+        padding-left: 1rem;
     }
 
     .tabs_admin_container{
