🎨 [STYLE] nuevos estilos para los tabs del administrador

--- a/src/components/pages/Admin/Admin.module.css
+++ b/src/components/pages/Admin/Admin.module.css
@@ -13,6 +13,7 @@
 }
 @media (min-width: 992px) {
     .admin_container{
+        position: relative;
         flex-flow: row;
         justify-content: end;
         min-height: 100dvh;
