--- a/src/components/adminComponents/NavAdmin/NavAdmin.module.css
+++ b/src/components/adminComponents/NavAdmin/NavAdmin.module.css
@@ -10,7 +10,14 @@
     width: 100%;
     border-radius:8px ;
 }
-
+.desktop_space{
+    display: none;
+}
+.tabs_container{
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
 .admin_tabLink{
     display: flex;
     flex-flow: row;
@@ -36,14 +43,32 @@
 }
 
 @media (min-width: 992px) {
-    .admin_nav_container{
+    .desktop_space{
+        display: block;
+        width: 100%;
         max-width: 250px;
+        height: 100dvh;
+    }
+    .admin_nav_container{
+        position: fixed;
+        top: 0px;
+        left: 10px;
+        max-width: 250px;
+        height: 100dvh;
         flex-flow: column;
         align-items: start;
         justify-content: start;
         min-height: 100vh;
         margin-top: 0px !important;
         border-radius:0px ;
+        z-index: 9;
+    }
+    
+    .tabs_container{
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        top: 110px;
     }
     .admin_tabLink{
         margin-top: 10px;
