--- a/src/components/adminComponents/UsersContainer/UserContainer.module.css
+++ b/src/components/adminComponents/UsersContainer/UserContainer.module.css
@@ -55,6 +55,7 @@
     gap: 20px;
 }
 .table_container{
+    height: 65vh;
     max-height: 650px;
     margin-top: 30px;
     overflow-y: scroll;
@@ -94,7 +95,7 @@
     .users_container{
         max-width: 85%;
         margin-top: 20px;
-        padding-left: 1rem;
+        padding-left: 2.5rem;
     }
 
     .tabs_admin_container{
