--- a/src/components/pages/Login/Login.css
+++ b/src/components/pages/Login/Login.css
@@ -48,3 +48,10 @@ input, textarea {
   border-color: #dc3545; 
   box-shadow: 0 0 0 0.2rem rgba(220, 53, 69, 0.25);
 }
+
+@media (max-width:429px){
+
+  .buttonLogin{
+    height: 60px;
+  }
+}
